--- a/src/components/ProAthlete/ProAthlete.scss
+++ b/src/components/ProAthlete/ProAthlete.scss
@@ -7,7 +7,7 @@
         transform: scale(1);
     }
     100% {
-        transform: scale(1.05);
+        transform: scale(1.1);
     }
 }
 
