--- a/src/pages/AthletePage/AthletePage.scss
+++ b/src/pages/AthletePage/AthletePage.scss
@@ -13,6 +13,7 @@
         @include tablet {
             padding: 0 2rem;
             @include desktop-margin-auto;
+            position: relative;
         }
 
         @include desktop {
